// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oas operation openapi v2 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "9ab1c1339675f",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "becbc0ed96d9d",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "7e79049c5af23",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "62e6080a56c45",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "029110671da4a",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "29e0f9745e980",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "b93f4ef60cf1d",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "9360fa7dc92ab",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "828c85d6a2307",
            },
          },
          "style": "form",
        },
        Object {
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "cdfdf74babd0b",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [],
        "id": "6ae68ec4738b2",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "extensions": Object {},
    "id": "8bd67834e0236",
    "method": "options",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "b93f4ef60cf1d",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "9360fa7dc92ab",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "828c85d6a2307",
            },
          },
          "style": "form",
        },
        Object {
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "cdfdf74babd0b",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [
          Object {
            "description": "Allowed clients",
            "id": "0b9c41debc794",
            "name": "Allow",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "type": "string",
              "x-stoplight": Object {
                "id": "b5186fbb4fdf5",
              },
            },
            "style": "simple",
          },
          Object {
            "description": "Remaining requests",
            "id": "bbf28e682b54b",
            "name": "X-Rate-Limit",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "format": "int64",
              "maximum": 9223372036854776000,
              "minimum": -9223372036854776000,
              "type": "number",
              "x-stoplight": Object {
                "id": "a07f1d06408fd",
              },
            },
            "style": "simple",
          },
        ],
        "id": "ee11fabc87ff7",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "4f51735d06d77",
    "method": "delete",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "5dfa6d9892b22",
      },
      Object {
        "code": "404",
        "contents": Array [],
        "description": "Pet not found",
        "headers": Array [],
        "id": "5dba6d9892c7e",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Deletes a pet",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "fc497ea5adb47",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "id": "1ee79143656f4",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "3c1327003ffa9",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "c12ebf63598e3",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "3d04477dddecb",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "d1d03adc8237d",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "d1be05066ac36",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "d1d03adc8237d",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "e1deb92ee1e73",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "c15ebf6359d8c",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
]
`;

exports[`oas operation openapi v3 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "9ab1c1339675f",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "97acd8b5018d8",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "97acd8b5018d8",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "029110671da4a",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "29e0f9745e980",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [],
        "id": "ccf0943cc3b92",
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [
        Object {
          "examples": Array [],
          "id": "e1c08deab8b36",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "828c85d6a2307",
            },
          },
          "style": "form",
        },
        Object {
          "examples": Array [],
          "id": "d04bcf1c141cf",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "cdfdf74babd0b",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "61b0e53aa1cce",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {},
              "type": "object",
              "x-stoplight": Object {
                "id": "8ea4aec4c2854",
              },
            },
          },
        ],
        "description": "OK",
        "headers": Array [],
        "id": "6ae68ec4738b2",
      },
    ],
    "security": Array [],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "fc497ea5adb47",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "97acd8b5018d8",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "97acd8b5018d8",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "954d8d8652606",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "1043a7cddde88",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9223372036854776000,
                  "minimum": -9223372036854776000,
                  "type": "integer",
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "2b4cfd51fbcde",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "9b5d65cfbc4fd",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "examples": Array [],
          "id": "1ee79143656f4",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "3c1327003ffa9",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "c12ebf63598e3",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "edbd8b027c519",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "d1d03adc8237d",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "e1deb92ee1e73",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "c15ebf6359d8c",
      },
    ],
    "security": Array [
      Array [
        Object {
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "7d917a06422fe",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "servers": Array [
      Object {
        "id": "be714555a4b1c",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "b9d12ab472c47",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "bfc2f4aa9bced",
        "name": "pet",
      },
    ],
  },
]
`;
